--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -19,7 +19,12 @@ Notes:	 Hand coded for Udemy.com
 /* --------------------------------------
    Typography
    -------------------------------------- */
-
+.well .page-header{
+  margin-top: 0;
+}
+.well .page-header h1{
+  margin-top: 0;
+}
 
 
 /* --------------------------------------
@@ -36,14 +41,39 @@ Notes:	 Hand coded for Udemy.com
 /* --------------------------------------
    Carousel
    -------------------------------------- */
-
+#mycarousel{
+  margin-top: 60px;
+}
+.carousel-caption{
+  font-size: 24px;
+}
+.carousel-caption h4{
+  font-size: 32px;
+}
+#mycarousel .item{
+  height: 400px;
+}
+#slide1 {
+  background: url('../../images/carousel_medium_01.jpg') top center no-repeat;
+}
+#slide2 {
+  background: url('../../images/carousel_medium_02.jpg') top center no-repeat;
+}
+#slide3 {
+  background: url('../../images/carousel_medium_03.jpg') top center no-repeat;
+}
 
 
 /* --------------------------------------
    Global Styles
    -------------------------------------- */
-
-
+.alert {
+  margin-top: 10px;
+  display: none;
+}
+.well{
+  margin: 20px 0;
+}
 
 /* --------------------------------------
    Media Queries
@@ -56,10 +86,37 @@ Notes:	 Hand coded for Udemy.com
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-
+  #mycarousel .item{
+    height: 310px;
+  }
+  #slide1 {
+    background: url('../../images/carousel_small_01.jpg') top center no-repeat;
+  }
+  #slide2 {
+    background: url('../../images/carousel_small_02.jpg') top center no-repeat;
+  }
+  #slide3 {
+    background: url('../../images/carousel_small_03.jpg') top center no-repeat;
+  }
+  .carousel-caption{
+    font-size: 20px;
+  }
+  .carousel-caption h4{
+    font-size: 16px;
 }
 
 /* Large desktop */
 @media (min-width: 1200px) {
-
+  #mycarousel .item {
+    height: 500px;
+  }
+  #slide1 {
+    background: url('../../images/carousel_large_01.jpg') top center no-repeat;
+  }
+  #slide2 {
+    background: url('../../images/carousel_large_02.jpg') top center no-repeat;
+  }
+  #slide3 {
+    background: url('../../images/carousel_large_03.jpg') top center no-repeat;
+  }
 }
