--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -82,6 +82,9 @@ Notes:	 Hand coded for Udemy.com
 .tabbable img.thumbnail{
   margin: 0 20px 10px 0;
 }
+#inputMessage{
+  margin-bottom: 20px;
+}
 
 /* --------------------------------------
    Media Queries
