--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -30,7 +30,10 @@ Notes:	 Hand coded for Udemy.com
 .well .page-header h1{
   margin-top: 0;
 }
-
+ul.unstyled{
+  list-style: none;
+  padding: 0;
+}
 
 /* --------------------------------------
    Navbar
@@ -110,6 +113,12 @@ Notes:	 Hand coded for Udemy.com
 }
 .thumbnail span.glyphicon{
   margin-right: 3px;
+}
+footer{
+  background: #333;
+  color: #eee;
+  font-size: 11px;
+  padding: 20px;
 }
 /* --------------------------------------
    Media Queries
